WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267399
Wheel event doesn't get fired on an element that has been reinserted after document.open
https://bugs.webkit.org/show_bug.cgi?id=267399
Summary
Wheel event doesn't get fired on an element that has been reinserted after do...
Ryosuke Niwa
Reported
2024-01-10 22:44:04 PST
Consider the following scenario: 1. A wheel event listener is added to an element 2. Disconnected the element from the document. 3. Run document.open 4. Insert the element back into the newly opened document. 5. Trigger a wheel event. Expected result: Wheel event is dispatched on the element. Actual result: Wheel event isn't dispatched on the element.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-01-11 00:30:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22648
EWS
Comment 2
2024-01-12 01:00:04 PST
Committed
272960@main
(a39166fd0ab3): <
https://commits.webkit.org/272960@main
> Reviewed commits have been landed. Closing PR #22648 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-12 01:01:18 PST
<
rdar://problem/120893136
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug